src/test/deca/codegen/invalid/errors/nullPointer.deca
// Description :
//    Test de déréférencement d'un pointeur null
//
// Resultats :
//    Error: Dereferencing Null Pointer

class A {
    int x;
}

{
    A a = null;
    println(a.x);
}
